--- a/index.html
+++ b/index.html
@@ -94,22 +94,31 @@
             <div class="prize-column">
                 <div class="prize-block">
                     <p class="prize-subheader">Best Overall Hack</p>
-                    <p class="prize-text">Awarded to the best overall project</p>
+                    <p class="prize-text">Awarded to the best overall project submitted to the hackathon</p>
                     <p class="prize-text"><b>Prize: GoPro HERO9</b></p>
                 </div>
                 <div class="prize-block">
                     <p class="prize-subheader">Best First-Time Hack</p>
                     <p class="prize-text">
-                        Awarded to the best overall project created by first-time hackers
+                        Awarded to the best project where all members of the hacking team are attending their first hackathon
                     </p>
-                    <p class="prize-text">Prize: JBL Flip 5 Speaker</p>
+                    <p class="prize-text"><b>Prize: JBL Flip 5 Speaker</b></p>
                 </div>
                 <div class="prize-block">
                     <p class="prize-subheader">Best Design Hack</p>
                     <p class="prize-text">
-                        Awarded to the best design/prototyping project
+                        Awarded to the best no-code project prototyped in Figma or another design software
                     </p>
-                    <p class="prize-text">Prize: Instax Mini 7</p>
+                    <p class="prize-text"><b>Prize: Instax Mini 7</b></p>
+                </div>
+                <div class="prize-block">
+                    <p class="prize-subheader">Wolfram Award</p>
+                    <p class="prize-text">
+                        Awarded to the top 10 projects that did not win any other prizes
+                    </p>
+                    <p class="prize-text">
+                        <b>Prize: One-year subscription to Wolfram|One Personal Edition</b>
+                    </p>
                 </div>
             </div>
 
@@ -117,21 +126,28 @@
                 <div class="prize-block">
                     <p class="prize-subheader">Best Climate Hack</p>
                     <p class="prize-text">Awarded to the best climate-centric project</p>
-                    <p class="prize-text">Prize: Fitbit Inspire 3</p>
+                    <p class="prize-text"><b>Prize: Fitbit Inspire 3</b></p>
                 </div>
                 <div class="prize-block">
                     <p class="prize-subheader">Best Hardware Hack</p>
                     <p class="prize-text">
                         Awarded to the best hardware project
                     </p>
-                    <p class="prize-text">Prize: Grove Starter Kit for Arduino</p>
+                    <p class="prize-text"><b>Prize: Grove Starter Kit for Arduino</b></p>
                 </div>
                 <div class="prize-block">
                     <p class="prize-subheader">Best Community-Building Hack Hack</p>
                     <p class="prize-text">
                         Awarded to the best social good and community-oriented project
                     </p>
-                    <p class="prize-text">Prize: Keychron V2 Keyboard</p>
+                    <p class="prize-text"><b>Prize: Keychron V2 Keyboard</b></p>
+                </div>
+                <div class="prize-block">
+                    <p class="prize-subheader">Nelson Award</p>
+                    <p class="prize-text">
+                        blurb
+                    </p>
+                    <p class="prize-text"><b>Prize: $250</b></p>
                 </div>
             </div>
         </div>
