changed layout of prizes

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <p class="header2"> Prize Tracks</p>
 
         <div class="prizes">
-            <div class="prize-column">
+            <!-- <div class="prize-column"> -->
                 <div class="prize-block">
                     <p class="prize-subheader">Best Overall Hack</p>
                     <p class="prize-text">Awarded to the best overall project submitted to the hackathon</p>
@@ -120,9 +120,9 @@
                         <b>Prize: One-year subscription to Wolfram|One Personal Edition</b>
                     </p>
                 </div>
-            </div>
+            <!-- </div> -->
 
-            <div class="prize-column">
+            <!-- <div class="prize-column"> -->
                 <div class="prize-block">
                     <p class="prize-subheader">Best Climate Hack</p>
                     <p class="prize-text">Awarded to the best climate-centric project</p>
@@ -149,7 +149,7 @@
                     </p>
                     <p class="prize-text"><b>Prize: $250</b></p>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
     </div>
 
