modifications to prizes and added wifi

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- page content goes into <body> -->
   <body>
     <div class="landingPage">
-        <img src="landing.png" alt="bruh" class="landingPage-pic" />
+        <img src="landing.png" alt="a cabin in the woods with a campfire" class="landingPage-pic" />
         <div class="landingPage-title">
             <h1>hack@brown 2023</h1>
             <p class="landingPage-text">day of dashboard</p>
@@ -19,38 +19,42 @@
     </div>
 
     <div class="important-info">
-        <p class="header2">Important Links</p>
+        <p class="header2">important links</p>
         <div class="buttons">
-            <a href="https://www.google.com/" class="buttonLink" >Discord</a>
-            <a href="https://www.google.com/" class="buttonLink" >Hacker Guide</a>
-            <a href="https://www.google.com/" class="buttonLink" >Devpost</a>           
+            <a href="https://discord.gg/nVbuNC48" class="buttonLink" >Discord</a>
+            <a href="https://docs.google.com/document/d/e/2PACX-1vR77ArcbMDe54y9D77QsWQAh9zTxxfhmuoHrfNc7djCjIo6RnazOZnJPdTucMtCxrj9DUbmNPFSnbsp/pub" class="buttonLink" >Hacker Guide</a>
+            <a href="https://hackatbrown2023.devpost.com/" class="buttonLink" >Devpost</a>           
             <br/>
-            <a href="https://www.google.com/" class="buttonLink" >Code of Conduct</a>
+            <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" class="buttonLink" >Code of Conduct</a>
             <a href="https://www.google.com/" class="buttonLink" >Event Spaces</a>
         </div>
           
         <hr/>
 
-        <p class="header2">Contact Information</p>
+        <p class="header2">wifi</p>
+        <p class="important-info-text">
+            Name: Hack@Brown2023
+            <br/>
+            Password: thatssocamp2023!
+        </p>
+
+        <hr/>
+
+        <p class="header2">contact information</p>
         <p class="important-info-text">
             Email: hello@hackatbrown.org
             <br/>
             Instagram: @hackatbrown
             <br/>
             Facebook: @hackatbrown
-        </p>
-
-        <hr/>
-
-        <p class="header2">Safety</p>
-        <p class="important-info-text">
+            <br/>
             Brown Public Safety: (401) 863-4111
         </p>
 
     </div>
 
     <div class="sponsors">
-        <p class="header2"> Top Sponsors </p> <!--im not sure what to say for this header-->
+        <p class="header2">top sponsors </p> <!--im not sure what to say for this header-->
 
         <div class="flex">
             <div class="child">
@@ -88,66 +92,66 @@
     </div>
 
     <div class="prize-tracks">
-        <p class="header2"> Prize Tracks</p>
+        <p class="header2">prize tracks</p>
 
         <div class="prizes">
             <!-- <div class="prize-column"> -->
                 <div class="prize-block">
                     <p class="prize-subheader">Best Overall Hack</p>
                     <p class="prize-text">Awarded to the best overall project submitted to the hackathon</p>
-                    <p class="prize-text"><b>Prize: GoPro HERO9</b></p>
+                    <p class="prize-name"><b>Prize: Nintendo Switch</b></p>
                 </div>
                 <div class="prize-block">
-                    <p class="prize-subheader">Best First-Time Hack</p>
+                    <p class="prize-subheader">Best Climate Hack</p>
+                    <p class="prize-text">Awarded to the best climate-centric project</p>
+                    <p class="prize-name">Prize: Fitbit Inspire 3</p>
+                </div>
+                <div class="prize-block">
+                    <p class="prize-subheader">Best Community Hack</p>
                     <p class="prize-text">
-                        Awarded to the best project where all members of the hacking team are attending their first hackathon
+                        Awarded to the best social good and community-oriented project
                     </p>
-                    <p class="prize-text"><b>Prize: JBL Flip 5 Speaker</b></p>
+                    <p class="prize-name"><b>Prize: Keychron V2 Keyboard</b></p>
                 </div>
                 <div class="prize-block">
                     <p class="prize-subheader">Best Design Hack</p>
                     <p class="prize-text">
                         Awarded to the best no-code project prototyped in Figma or another design software
                     </p>
-                    <p class="prize-text"><b>Prize: Instax Mini 7</b></p>
+                    <p class="prize-name"><b>Prize: Instax Mini 7</b></p>
+                </div>
+            <!-- </div> -->
+
+            <!-- <div class="prize-column"> -->
+                <div class="prize-block">
+                    <p class="prize-subheader">Best Hardware Hack</p>
+                    <p class="prize-text">
+                        Awarded to the best hardware-centric project
+                    </p>
+                    <p class="prize-name"><b>Prize: Grove Starter Kit for Arduino</b></p>
+                </div>
+                <div class="prize-block">
+                    <p class="prize-subheader">Best First-Time Hack</p>
+                    <p class="prize-text">
+                        Awarded to the best project where all members of the hacking team are attending their first hackathon
+                    </p>
+                    <p class="prize-name"><b>Prize: JBL Flip 5 Speaker</b></p>
                 </div>
                 <div class="prize-block">
                     <p class="prize-subheader">Wolfram Award</p>
                     <p class="prize-text">
                         Awarded to the top 10 projects that did not win any other prizes
                     </p>
-                    <p class="prize-text">
+                    <p class="prize-name">
                         <b>Prize: One-year subscription to Wolfram|One Personal Edition</b>
                     </p>
-                </div>
-            <!-- </div> -->
-
-            <!-- <div class="prize-column"> -->
-                <div class="prize-block">
-                    <p class="prize-subheader">Best Climate Hack</p>
-                    <p class="prize-text">Awarded to the best climate-centric project</p>
-                    <p class="prize-text"><b>Prize: Fitbit Inspire 3</b></p>
-                </div>
-                <div class="prize-block">
-                    <p class="prize-subheader">Best Hardware Hack</p>
-                    <p class="prize-text">
-                        Awarded to the best hardware project
-                    </p>
-                    <p class="prize-text"><b>Prize: Grove Starter Kit for Arduino</b></p>
-                </div>
-                <div class="prize-block">
-                    <p class="prize-subheader">Best Community-Building Hack Hack</p>
-                    <p class="prize-text">
-                        Awarded to the best social good and community-oriented project
-                    </p>
-                    <p class="prize-text"><b>Prize: Keychron V2 Keyboard</b></p>
                 </div>
                 <div class="prize-block">
                     <p class="prize-subheader">Nelson Award</p>
                     <p class="prize-text">
-                        blurb
+                        Awarded to 2 projects selected by the Hack@Brown organizing team
                     </p>
-                    <p class="prize-text"><b>Prize: $250</b></p>
+                    <p class="prize-name"><b>Prize: $250 (split across team)</b></p>
                 </div>
             <!-- </div> -->
         </div>
