fixed bold prize names

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="prize-block">
                     <p class="prize-subheader">Best Overall Hack</p>
                     <p class="prize-text">Awarded to the best overall project submitted to the hackathon</p>
-                    <p class="prize-name"><b>Prize: Nintendo Switch</b></p>
+                    <p class="prize-name">Prize: Nintendo Switch</p>
                 </div>
                 <div class="prize-block">
                     <p class="prize-subheader">Best Climate Hack</p>
@@ -111,14 +111,14 @@
                     <p class="prize-text">
                         Awarded to the best social good and community-oriented project
                     </p>
-                    <p class="prize-name"><b>Prize: Keychron V2 Keyboard</b></p>
+                    <p class="prize-name">Prize: Keychron V2 Keyboard</p>
                 </div>
                 <div class="prize-block">
                     <p class="prize-subheader">Best Design Hack</p>
                     <p class="prize-text">
                         Awarded to the best no-code project prototyped in Figma or another design software
                     </p>
-                    <p class="prize-name"><b>Prize: Instax Mini 7</b></p>
+                    <p class="prize-name">Prize: Instax Mini 7 Polaroid</p>
                 </div>
             <!-- </div> -->
 
@@ -128,14 +128,14 @@
                     <p class="prize-text">
                         Awarded to the best hardware-centric project
                     </p>
-                    <p class="prize-name"><b>Prize: Grove Starter Kit for Arduino</b></p>
+                    <p class="prize-name">Prize: Grove Starter Kit for Arduino</p>
                 </div>
                 <div class="prize-block">
                     <p class="prize-subheader">Best First-Time Hack</p>
                     <p class="prize-text">
                         Awarded to the best project where all members of the hacking team are attending their first hackathon
                     </p>
-                    <p class="prize-name"><b>Prize: JBL Flip 5 Speaker</b></p>
+                    <p class="prize-name">Prize: JBL Flip 5 Speaker</p>
                 </div>
                 <div class="prize-block">
                     <p class="prize-subheader">Wolfram Award</p>
@@ -143,7 +143,7 @@
                         Awarded to the top 10 projects that did not win any other prizes
                     </p>
                     <p class="prize-name">
-                        <b>Prize: One-year subscription to Wolfram|One Personal Edition</b>
+                        Prize: One-year subscription to Wolfram|One Personal Edition
                     </p>
                 </div>
                 <div class="prize-block">
@@ -151,7 +151,7 @@
                     <p class="prize-text">
                         Awarded to 2 projects selected by the Hack@Brown organizing team
                     </p>
-                    <p class="prize-name"><b>Prize: $250 (split across team)</b></p>
+                    <p class="prize-name">Prize: $250 (split across team)</p>
                 </div>
             <!-- </div> -->
         </div>
