added MLH prizes

--- a/index.html
+++ b/index.html
@@ -153,6 +153,45 @@
                     </p>
                     <p class="prize-name">Prize: $250 (split across team)</p>
                 </div>
+                <div class="prize-block">
+                    <p class="prize-subheader">Best Domain Name from Domain.com</p>
+                    <p class="prize-text">
+                        Register a .tech domain name using Domain.com! Each team may submit one entry per person on the team.
+                    </p>
+                    <p class="prize-name">Prize: Domain.com Backpack</p>
+                </div>
+                <div class="prize-block">
+                    <p class="prize-subheader">Most Creative Use of Twilio</p>
+                    <p class="prize-text">
+                        Twilio allows you to incorporate communication features using a web service API.
+                        Build a hack using any Twilio API for a chance to win this prize. Get started with $50 in free credit
+                    </p>
+                    <p class="prize-name">Prize: Twilio Swag Box & GameGo Console</p>
+                </div>
+                <div class="prize-block">
+                    <p class="prize-subheader">Best Accessibility Hack sponsored by Fidelity</p>
+                    <p class="prize-text">
+                        Fidelity is challenging you to come up with innovative ways to make tech more accessible! For this prize, 
+                        find and build solutions that put opportunities and resources within reach to all communities.
+                    </p>
+                    <p class="prize-name">Prize: Fidelity-branded Wireless Charger</p>
+                </div>
+                <div class="prize-block">
+                    <p class="prize-subheader">Best Use of Velo by Wix</p>
+                    <p class="prize-text">
+                        With a built-in database and fully customizable JavaScript front-end and back-end,
+                        Velo helps you develop a full-stack application directly in your browser.
+                    </p>
+                    <p class="prize-name">Prize: Wacom Drawing Tablet</p>
+                </div>
+                <div class="prize-block">
+                    <p class="prize-subheader">Best Use of Microsoft Cloud for Your Community</p>
+                    <p class="prize-text">
+                        Build your hackathon project with the Microsoft Cloud that
+                        tackles a social impact issue of your choice
+                    </p>
+                    <p class="prize-name">Prize: LinkedIn Premium 12-month subscription & XBox Ultimate 3-month Game Pass</p>
+                </div>
             <!-- </div> -->
         </div>
     </div>
