--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="important-info">
         <p class="header2">important links</p>
         <div class="buttons">
-            <a href="https://discord.gg/nVbuNC48" target="_blank" class="buttonLink" >Discord</a>
+            <a href="https://discord.gg/sTwB5Vy7" target="_blank" class="buttonLink" >Discord</a>
             <a href="https://docs.google.com/document/d/e/2PACX-1vR77ArcbMDe54y9D77QsWQAh9zTxxfhmuoHrfNc7djCjIo6RnazOZnJPdTucMtCxrj9DUbmNPFSnbsp/pub" target="_blank" class="buttonLink" >Hacker Guide</a>
             <a href="https://hackatbrown2023.devpost.com/" target="_blank" class="buttonLink" >Devpost</a>           
             <br/>
